objects/CN_Province__c.object
<CustomObject>
    <fields>
        <fullName>CN_Province_CN__c</fullName>
        <label>Province(CN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province_EN__c</fullName>
        <label>Province(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Province Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Province</label>
    <nameField>
        <label>Province Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provinces</pluralLabel>
    <recordTypes>
        <fullName>CN_Province</fullName>
        <active>true</active>
        <label>CN Province</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>